# italia-corpus-script

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  coverage-requirements.json  pyproject.toml  quality-exceptions.json  requirements.txt
.github/workflows/: ci.yml  snapshots.yml
docs/: rollout.md  upstream-anomalies.md
src/italia_corpus/: __init__.py  __main__.py  akn.py  cli.py  config.py  converter.py  filename.py  frontmatter.py  git_ops.py  github_client.py  normattiva.py  pipeline.py  refs.py  snapshot.py  supplemental.py
tests/: test_pipeline.py  test_supplemental.py
tests/fixtures/: codice_civile.xml  codice_civile_attuazione.xml  codice_penale.xml  complex.xml  temporal.xml
